[package]
name = "wordscapes-helper"
version = "0.1.0"
authors = ["Bence Meszaros <bence.me@gmail.com>"]
edition = "2018"
default-run = "main"

# disable wasm-opt due to bug: https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "bench_all"
harness = false

[dependencies]
fixedbitset = "0.3.0"
serde = { version="1.0.114", features = ["derive"] }
bincode = "1.3.1"
petgraph = { version="0.5.1", features=["serde-1"] }
ndarray = "0.13.1"

wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"
# itertools = "0.9.0"
# wee_alloc = "0.4.5"

[dev-dependencies]
criterion = "0.3"

[profile.release]
# The binary is already so huge, I don't think this makes a difference
# opt-level = "s"
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
